--- a/values.yaml
+++ b/values.yaml
@@ -30,29 +30,29 @@ defaultRules:
   create: true
   rules:
     alertmanager: true
-    etcd: true
-    general: true
-    k8s: true
-    kubeApiserver: true
-    kubeApiserverAvailability: true
-    kubeApiserverError: true
-    kubeApiserverSlos: true
-    kubelet: true
-    kubePrometheusGeneral: true
-    kubePrometheusNodeAlerting: true
-    kubePrometheusNodeRecording: true
-    kubernetesAbsent: true
-    kubernetesApps: true
-    kubernetesResources: true
-    kubernetesStorage: true
-    kubernetesSystem: true
-    kubeScheduler: true
-    kubeStateMetrics: true
-    network: true
-    node: true
-    prometheus: true
-    prometheusOperator: true
-    time: true
+    # etcd: true
+    # general: true
+    # k8s: true
+    # kubeApiserver: true
+    # kubeApiserverAvailability: true
+    # kubeApiserverError: true
+    # kubeApiserverSlos: true
+    # kubelet: true
+    # kubePrometheusGeneral: true
+    # kubePrometheusNodeAlerting: true
+    # kubePrometheusNodeRecording: true
+    # kubernetesAbsent: true
+    # kubernetesApps: true
+    # kubernetesResources: true
+    # kubernetesStorage: true
+    # kubernetesSystem: true
+    # kubeScheduler: true
+    # kubeStateMetrics: true
+    # network: true
+    # node: true
+    # prometheus: true
+    # prometheusOperator: true
+    # time: true
 
   ## Runbook url prefix for default rules
   runbookUrl: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#
