added nodeport alert maanger

--- a/values.yaml
+++ b/values.yaml
@@ -1417,7 +1417,7 @@ prometheus:
     loadBalancerSourceRanges: []
     ## Service type
     ##
-    type: ClusterIP
+    type: NodePort
 
     sessionAffinity: ""
 
