--- a/values.yaml
+++ b/values.yaml
@@ -133,7 +133,8 @@ alertmanager:
   config:
     global:
       resolve_timeout: 2ms
-    route:
+    route:  
+      group_by: ['alertname','cluster','instance','priority']
       group_wait: 1m
       group_interval: 15s
       repeat_interval: 2m
@@ -313,19 +314,22 @@ alertmanager:
     ## 	metric relabel configs to apply to samples before ingestion.
     ##
     metricRelabelings: []
+    
     # - action: keep
     #   regex: 'kube_(daemonset|deployment|pod|namespace|node|statefulset).+'
     #   sourceLabels: [__name__]
 
     # 	relabel configs to apply to samples before ingestion.
     ##
-    relabelings: []
-    # - sourceLabels: [__meta_kubernetes_pod_node_name]
-    #   separator: ;
-    #   regex: ^(.*)$
-    #   targetLabel: nodename
-    #   replacement: $1
-    #   action: replace
+    relabel_configs:
+    # - source_labels: ['nodename']
+    #   target_label: 'instance'
+    - sourceLabels: [__meta_kubernetes_pod_node_name]
+      separator: ;
+      regex: ^(.*)$
+      targetLabel: nodename
+      replacement: $1
+      action: replace
 
   ## Settings affecting alertmanagerSpec
   ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#alertmanagerspec
